src/core-crm/objects/hed__Program_Enrollment__c/fields/Academic_Status__c.field-meta.xml
<CustomField>
    <fullName>Academic_Status__c</fullName>
    <description>The student’s current academic status</description>
    <label>Academic Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Academic_Status</valueSetName>
    </valueSet>
</CustomField>