src/core-crm/objects/hed__Program_Enrollment__c/fields/Academic_Status_Date__c.field-meta.xml
<CustomField>
    <fullName>Academic_Status_Date__c</fullName>
    <description>The date in which the academic status changed.</description>
    <label>Academic Status Date</label>
    <type>Date</type>
</CustomField>