src/core-crm/objects/hed__Program_Enrollment__c/fields/Commencement_Date__c.field-meta.xml
<CustomField>
    <fullName>Commencement_Date__c</fullName>
    <description>The date the Student Actually started their program</description>
    <label>Commencement Date</label>
    <type>Date</type>
</CustomField>