src/core-crm/objects/hed__Program_Enrollment__c/fields/Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Completion_Date__c</fullName>
    <description>The date the Student Completed their Program</description>
    <label>Completion Date</label>
    <type>Date</type>
</CustomField>