src/core-crm/objects/hed__Program_Enrollment__c/fields/Discontinued_Date__c.field-meta.xml
<CustomField>
    <fullName>Discontinued_Date__c</fullName>
    <description>The date the Student discontinued their Program</description>
    <label>Discontinued Date</label>
    <type>Date</type>
</CustomField>