src/core-crm/objects/hed__Program_Enrollment__c/fields/Enrollment_Stage__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Stage__c</fullName>
    <description>The Enrollment Stage as per SAMS stages</description>
    <label>Enrollment Stage</label>
    <length>80</length>
    <type>Text</type>
</CustomField>