src/core-crm/objects/hed__Program_Enrollment__c/fields/Enrollment_Status__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Status__c</fullName>
    <description>The enrollment status as per SAMS status</description>
    <label>Enrollment Status</label>
    <length>80</length>
    <type>Text</type>
</CustomField>