src/core-crm/objects/hed__Program_Enrollment__c/fields/Enrollment_Status_Date__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Status_Date__c</fullName>
    <description>The date Status changed</description>
    <label>Enrollment Status Date</label>
    <type>Date</type>
</CustomField>