src/core-crm/objects/hed__Program_Enrollment__c/fields/Graduating_Faculty__c.field-meta.xml
<CustomField>
    <fullName>Graduating_Faculty__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Faculty the person graduated with</description>
    <label>Graduating Faculty</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Program Enrollments (Graduating Faculty)</relationshipLabel>
    <relationshipName>Program_Enrollments</relationshipName>
    <type>Lookup</type>
</CustomField>