src/core-crm/objects/hed__Program_Enrollment__c/fields/Graduating_Faculty_A__c.field-meta.xml
<CustomField>
    <fullName>Graduating_Faculty_A__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The faculty the person graduated with</description>
    <label>Graduating Faculty A</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Program Enrollments (Graduating Faculty A)</relationshipLabel>
    <relationshipName>Graduating_Faculty_A_Program_Enrollments</relationshipName>
    <type>Lookup</type>
</CustomField>