src/core-crm/objects/hed__Program_Enrollment__c/fields/Graduating_Faculty_B__c.field-meta.xml
<CustomField>
    <fullName>Graduating_Faculty_B__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The second faculty the person graduated for double degrees</description>
    <label>Graduating Faculty B</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Program Enrollments (Graduating Faculty B)</relationshipLabel>
    <relationshipName>Graduating_Faculty_B_Program_Enrollments</relationshipName>
    <type>Lookup</type>
</CustomField>