src/core-crm/objects/hed__Program_Enrollment__c/fields/Graduating_Other_Faculty__c.field-meta.xml
<CustomField>
    <fullName>Graduating_Other_Faculty__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The second Faculty the person graduated for double degrees</description>
    <label>Graduating Other Faculty</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Program Enrollments (Graduating Other Faculty)</relationshipLabel>
    <relationshipName>Program_Enrollments1</relationshipName>
    <type>Lookup</type>
</CustomField>