src/core-crm/objects/hed__Program_Enrollment__c/fields/hed__Account__c.field-meta.xml
<CustomField>
    <fullName>hed__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Program the student is enrolled in.</description>
    <inlineHelpText>The Program the student is enrolled in.</inlineHelpText>
    <label>Program</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Program Enrollments</relationshipLabel>
    <relationshipName>Program_Enrollments</relationshipName>
    <type>Lookup</type>
</CustomField>