src/core-crm/objects/hed__Program_Enrollment__c/fields/Previous_Academic_Status__c.field-meta.xml
<CustomField>
    <fullName>Previous_Academic_Status__c</fullName>
    <description>The student’s previous academic status</description>
    <label>Previous Academic Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Academic_Status</valueSetName>
    </valueSet>
</CustomField>