src/core-crm/objects/hed__Program_Enrollment__c/fields/Visa_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Visa_Effective_Date__c</fullName>
    <description>The effective date of the Visa that grants entry to Australia.</description>
    <label>Visa Effective Date</label>
    <type>Date</type>
</CustomField>