src/core-crm/objects/hed__Program_Enrollment__c/fields/Visa_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Visa_End_Date__c</fullName>
    <description>The date of Visa is the last day a person is allowed to stay in Australia legally.</description>
    <label>Visa End Date</label>
    <type>Date</type>
</CustomField>