src/core-crm/objects/hed__Program_Enrollment__c/fields/Visa_Status__c.field-meta.xml
<CustomField>
    <fullName>Visa_Status__c</fullName>
    <description>International students require Study Visa. Once confirmation of enrolment is obtained, they need to apply. The status of student Visa is dependent on their study at admitted course.</description>
    <label>Visa Status</label>
    <length>80</length>
    <type>Text</type>
</CustomField>