src/core-crm/objects/hed__Program_Enrollment__c/listViews/hed__All.listView-meta.xml
<ListView>
    <fullName>hed__All</fullName>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <columns>hed__GPA__c</columns>
    <columns>hed__Credits_Attempted__c</columns>
    <columns>hed__Credits_Earned__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>